[package]
name = "fugu"
version = "0.0.0"
authors = ["lunabunn <iamrabbitmoon@gmail.com>"]
edition = "2021"
description = "A simple cross-platform rendering library."
repository = "https://github.com/pufferfish-rs/fugu/"
license = "Zlib OR MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
