[package]
name = "fugu"
version = "0.1.0"
authors = ["lunabunn <iamrabbitmoon@gmail.com>"]
edition = "2021"
description = "A simple cross-platform rendering library."
repository = "https://github.com/pufferfish-rs/fugu/"
license = "Zlib OR MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "0.11.2"

[dev-dependencies]
image = "0.24.1"
sdl2 = { version = "0.35.2", features = ["bundled"] }
