[package]
name = "fugu"
version = "0.1.0"
authors = ["lunabunn <iamrabbitmoon@gmail.com>"]
edition = "2021"
rust-version = "1.56"
description = "A simple cross-platform rendering library"
repository = "https://github.com/pufferfish-rs/fugu/"
license = "Zlib OR MIT OR Apache-2.0"

[dependencies]
glow = "0.11.2"

[dev-dependencies]
glutin = "0.28.0"
image = "0.24.1"
